--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="utf-8"/>
 <body style="margin:0;background-color: black;">
-<link href="video-js.css" rel="stylesheet">
+<link href="video-js.css" rel="stylesheet"/>
 <script src="video.js"></script> 
 <script src="newskin.js"></script>
 
